[gd_scene load_steps=3 format=3 uid="uid://bakoai4hv3e7e"]

[ext_resource type="Script" uid="uid://b1lecf4myj4v1" path="res://components/pickup/pick_detector.gd" id="1_wfy8w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_miw6d"]
resource_local_to_scene = true

[node name="PickDetector" type="PickDetector"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_wfy8w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_miw6d")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
